add fetch URL function

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     
     <body>
-        <header>
+        <header id="header">
             <h1>Weather Forecast</h1>
         </header>
 
@@ -15,12 +15,13 @@
 
         </aside>
 
-        <main>
-                
+        <main id="weather-cards">
+
         </main>
 
         <footer>
 
         </footer>
+        <script src="./assets/js/script.js"></script>
     </body>
 </html>
