default styling and start to css applied

--- a/index.html
+++ b/index.html
@@ -11,16 +11,20 @@
             <h1>Weather Forecast</h1>
         </header>
 
-        <aside>
+        <aside id="city-search">
 
         </aside>
 
-        <main id="weather-cards">
+        <main id="weather-summary">
 
         </main>
 
-        <footer>
+        <div id="weather-cards">
 
+        </div>
+
+        <footer>
+            <h6>Made by Ben Lealan with HTML, CSS & JavaScript</h6>
         </footer>
         <script src="./assets/js/script.js"></script>
     </body>
