added save city search to local storage

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
             <h1>Weather Forecast</h1>
         </header>
 
-        <aside id="city-search">
-
+        <aside id="city-search-bar">
+            <p>What's the weather like in...?</p>
+            <input class="text-input" id="city-search" type="text" placeholder="Search for city" />
+            <button id="searchBtn">Submit</button>
         </aside>
 
         <main id="weather-summary">
