added jquery and coordinate function

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <aside id="city-search-bar">
             <p>What's the weather like in...?</p>
-            <input class="text-input" id="city-search" type="text" placeholder="Search for city" />
+            <input class="text-input" id="city-search" type="text" placeholder="City, country" />
             <button id="searchBtn">Submit</button>
         </aside>
 
@@ -28,6 +28,7 @@
         <footer>
             <h6>Made by Ben Lealan with HTML, CSS & JavaScript</h6>
         </footer>
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
         <script src="./assets/js/script.js"></script>
     </body>
 </html>
