add history buttons

--- a/index.html
+++ b/index.html
@@ -11,10 +11,15 @@
             <h1>Weather Forecast</h1>
         </header>
 
-        <aside id="city-search-bar">
+        <nav id="city-search-bar">
             <p>What's the weather like in...?</p>
             <input class="text-input" id="city-search" type="text" placeholder="City, country" />
             <button id="searchBtn">Submit</button>
+        </nav>
+
+        <aside id="search-history">
+            <p>Click on these buttons to view your previous searches:</p>
+
         </aside>
 
         <main id="weather-summary">
