--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
         <nav id="city-search-bar">
             <p>What's the weather like in...?</p>
-            <input class="text-input" id="city-search" type="text" placeholder="City, country" />
+            <input class="text-input" id="city-search" type="text" placeholder="City"/>
+            <input class="text-input" id="country-search" type="text" placeholder="Country"/>
             <button id="searchBtn">Submit</button>
         </nav>
 
